--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 body{
     display: flex;
     justify-content: center;
+    background-color: aqua;
 }
 
 #title, #type, #heightTitle, #heightText, #weightTitle, #weightText{
